--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Todo App</title>
-    <link rel="stylesheet" href="./todo-style.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 <style>
     
@@ -24,7 +24,7 @@
         <button id="clear-list">Clear List</button>
         </div>  
     </div>
-    <script src="./todo.js"></script>
+    <script src="./script.js"></script>
 </body>
 
 </html>
